--- a/package.json
+++ b/package.json
@@ -1,26 +1,49 @@
 {
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "dolar-blue",
-  "title": "Dolar Blue",
-  "description": "Get Argentinian dolar \"blue\" actual and historical price.",
+  "title": "Dollar Blue - Argentine Exchange Rate",
+  "description": "Get current and historical rates for Argentina's 'Blue Dollar' exchange.",
   "icon": "extension-icon.png",
   "author": "juansegnana",
   "categories": [
-    "Finance"
+    "Finance",
+    "Productivity"
   ],
   "license": "MIT",
   "commands": [
     {
-      "name": "get-actual-value",
-      "title": "Get actual value",
-      "description": "Get dolar blue price.",
-      "mode": "view"
+      "name": "get-current-rate",
+      "title": "Get Current Rate",
+      "description": "Fetch the latest Blue Dollar exchange rate.",
+      "mode": "view",
+      "keywords": ["curr", "rate", "now", "today"]
     },
     {
-      "name": "get-historical-price",
-      "title": "Get historical price",
-      "description": "Get dolar blue price given a date.",
-      "mode": "view"
+      "name": "get-historical-rate",
+      "title": "Historical Rate",
+      "description": "Retrieve historical Blue Dollar rates for a specific date.",
+      "mode": "view",
+      "keywords": ["hist", "past", "previous"],
+      "arguments": [
+        {
+          "name": "year",
+          "placeholder": "YYYY",
+          "type": "text",
+          "required": false
+        },
+        {
+          "name": "month",
+          "placeholder": "MM",
+          "type": "text",
+          "required": false
+        },
+        {
+          "name": "day",
+          "placeholder": "DD",
+          "type": "text",
+          "required": false
+        }
+      ]
     }
   ],
   "dependencies": {
